--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-particles": "^2.9.3",
