--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@iconscout/react-unicons": "^2.0.2",
+    "@iconscout/unicons": "^4.0.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.3",
     "@mui/styles": "^5.12.3",
     "@next/font": "^13.4.4",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.7",
@@ -26,12 +29,14 @@
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
-    "react-lazy-load-image-component": "^1.5.6",
+    "react-feather": "^2.0.10",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-particles": "^2.9.3",
     "react-whatsapp-button": "^2.0.0",
     "sass": "^1.62.1",
     "swiper": "^11.0.3",
     "tailwindcss": "3.3.2",
+    "tiny-slider-react": "^0.5.7",
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
